<resources>
    <string name="app_name">QuickBracket</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_torneo">Torneo</string>
    <string name="title_reglas">Reglas</string>
    <string name="tv_bienvenida">Bienvenido a QuickBracket</string>
    <string name="tv_no_torneos">No tienes torneos activos de momento, crea uno ahora mismo!</string>
    <string name="btn_crear_torneo">Crear Torneo</string>
    <string name="tv_nombreTorneo">Nombre del torneo</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="tv_cantidadJugarores">Cantidad de jugadores por equipo</string>
    <string name="tv_seleccion">Seleccione el juego</string>
    <string name="hint_nombreTorneo">ej: Fire and Ice</string>
    <string name="tv_infojugadores">Cada equipo debe tener X jugadores</string>
    <string name="hint_nombre_equipo">Nombre del equipo</string>
    <string name="btn_agregar">Agregar</string>
    <string name="et_correo">correo electrónico</string>
    <string name="et_contrasena">contraseña</string>
    <string name="btn_Iniciar_Sesion">"Iniciar Sesión "</string>
    <string name="btn_registro">Regístrate!</string>
    <string name="tv_opcion">no tienes una cuenta?</string>
    <string name="et_constrasena2">confirmar contraseña</string>
    <string name="tv_tituloRegistro">Primera vez por aqui eh? Regístrate!</string>
    <string name="tv_torneos_activos">Torneos Activos</string>
    <string name="tv_torneos_finalizados">Torneos Finalizados</string>
    <string name="btn_finalizar_torneo">Finalizar Torneo</string>
    <string name="tv_estado">Estado</string>
    <string name="btn_editar_torneo">Editar Torneo</string>
    <string name="btn_ver_brackets">Ver Brackets</string>
    <string name="btn_cambiar_tema">cambiar tema</string>

    <string-array name="lista_juegos">
        <item>League of Legends</item>
        <item>Valorant</item>
        <item>Counter-Strike 2</item>
        <item>Rocket League</item>
        <item>FIFA 24</item>
    </string-array>

    <string-array name="cantidad_jugadores">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


</resources>