<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.proyecto.quickbracket.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_trofeo"
        android:name="com.proyecto.quickbracket.ui.torneo.TorneoFragment"
        android:label="@string/title_torneo"
        tools:layout="@layout/fragment_torneo" />

    <fragment
        android:id="@+id/navigation_reglas"
        android:name="com.proyecto.quickbracket.ui.reglas.ReglasFragment"
        android:label="@string/title_reglas"
        tools:layout="@layout/fragment_reglas" />
</navigation>