<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarEquiposActivity">

    <!-- Texto para indicar el número de jugadores por equipo -->
    <TextView
        android:id="@+id/tv_info_jugadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_infojugadores"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Campo para ingresar el nombre del equipo -->
    <EditText
        android:id="@+id/etNombreEquipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre_equipo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAgregarEquipo"
        app:layout_constraintTop_toBottomOf="@id/tv_info_jugadores" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Botón para agregar equipo -->
    <Button
        android:id="@+id/btnAgregarEquipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_agregar"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etNombreEquipo"
        app:layout_constraintBottom_toBottomOf="@+id/etNombreEquipo" />

    <!-- ScrollView que contiene el LinearLayout dinámico de jugadores -->
    <ScrollView
        android:id="@+id/scrollJugadores"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/etNombreEquipo"
        app:layout_constraintBottom_toTopOf="@+id/rvEquipos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/layoutJugadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" />
    </ScrollView>

    <!-- RecyclerView para mostrar equipos agregados -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEquipos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/scrollJugadores"
        app:layout_constraintBottom_toTopOf="@id/btnSiguiente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botón para continuar -->
    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_siguiente"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
